<resources>
    <string name="app_name">Another Git</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="Repository">Repository</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter The Word</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="replace">##</string>
</resources>