<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:background="@color/ocean"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatars"
            android:layout_width="110dp"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:src="@android:color/darker_gray"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.009"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/full_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fullname"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatars" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_names" />

        <ImageView
            android:id="@+id/img_company"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/user_company"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/company"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/img_company"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_company" />

        <TextView
            android:id="@+id/user_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/img_location"
            app:layout_constraintTop_toBottomOf="@+id/user_company" />

        <TextView
            android:id="@+id/txt_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/followers"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/avatars"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="24dp"
            android:text="@string/following"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/txt_followers"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="24dp"
            android:text="@string/Repository"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/txt_following"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/user_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:text="##"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/avatars"
            app:layout_constraintTop_toBottomOf="@+id/txt_followers" />

        <TextView
            android:id="@+id/user_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="12dp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="##"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/txt_followers"
            app:layout_constraintTop_toBottomOf="@+id/txt_following" />

        <TextView
            android:id="@+id/user_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="12dp"
            android:text="##"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/txt_following"
            app:layout_constraintTop_toBottomOf="@+id/txt_repository" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>